# superintelligence

./: .gitignore  Cargo.toml  README.md
.github/workflows/: npm-publish.yml
.pi/: AGENTS.md
.pi/agents/: ORCHESTRATOR.md
.pi/skills/agent-monitor/: SKILL.md
.pi/skills/pi-session-reader/: SKILL.md
.pi/skills/wezterm-orchestrator/: SKILL.md
browser/: package-lock.json  package.json
browser/src/: cli.ts  cookies.ts  handler.ts  launcher.ts  server.ts  session.ts
browser/src/__tests__/: cookies.test.ts  launcher.test.ts  profiles.test.ts
browser/src/profiles/: index.ts
crates/bb/: Cargo.toml
crates/bb/src/: main.rs
crates/bigbrother/: Cargo.toml  README.md
crates/bigbrother-core/: Cargo.toml
crates/bigbrother-core/src/: accessibility.rs  apps.rs  desktop.rs  element.rs  error.rs  input.rs  lib.rs  locator.rs  selector.rs
crates/bigbrother-core/src/platform/: mod.rs
crates/bigbrother-core/src/platform/linux/: mod.rs
crates/bigbrother-core/src/platform/macos/: mod.rs
crates/bigbrother-core/src/platform/windows/: accessibility.rs  input.rs  mod.rs
crates/bigbrother-recorder/: Cargo.toml
crates/bigbrother-recorder/src/: events.rs  lib.rs  recorder.rs  replay.rs  storage.rs
crates/bigbrother-recorder/src/platform/: mod.rs
crates/bigbrother-recorder/src/platform/linux/: mod.rs
crates/bigbrother-recorder/src/platform/macos/: mod.rs
crates/bigbrother-recorder/src/platform/windows/: mod.rs  replay.rs
crates/bigbrother/src/: lib.rs
crates/workflow-recorder/src/: lib.rs  recorder.rs
npm/bb/: install.js  package.json
npm/bb-darwin-arm64/: package.json
npm/bb-darwin-x64/: package.json
npm/bb-linux-x64-gnu/: package.json
npm/bb-win32-x64-msvc/: package.json
src/: lib.rs  scrape.rs
web/: package-lock.json  package.json
web/.next/: BUILD_ID  build-manifest.json  fallback-build-manifest.json  prerender-manifest.json  required-server-files.js  required-server-files.json  trace  trace-build
web/.next/cache/: .previewinfo  .rscinfo  .tsbuildinfo
web/.next/server/: server-reference-manifest.js  server-reference-manifest.json
web/.next/server/app/: _global-error.rsc  _not-found.html  index.html  index.rsc  page_client-reference-manifest.js
web/.next/server/app/_global-error.segments/: __PAGE__.segment.rsc  _head.segment.rsc  _index.segment.rsc  _tree.segment.rsc
web/.next/server/app/_not-found/: page_client-reference-manifest.js
web/.next/server/app/_not-found.segments/: _full.segment.rsc  _head.segment.rsc  _index.segment.rsc  _tree.segment.rsc
web/.next/server/app/_not-found.segments/_not-found/: __PAGE__.segment.rsc
web/.next/server/app/index.segments/: __PAGE__.segment.rsc  _head.segment.rsc  _index.segment.rsc  _tree.segment.rsc
web/.next/server/chunks/ssr/: app_layout_tsx_271801d7._.js  app_layout_tsx_271801d7._.js.map  app_page_tsx_55b2e5ee._.js  app_page_tsx_55b2e5ee._.js.map
web/.next/server/pages/: 500.html
web/.next/static/chunks/: 0c7de6c256c6b097.js  37f21b439a72017f.css
web/app/: globals.css  layout.tsx  page.tsx
web/app/components/: TerminalDemo.tsx
