[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/louis030195/bigbrother"

[workspace.dependencies]
cidre = { version = "0.13", features = ["ax", "cg", "blocks", "ns", "app"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

[package]
name = "bigbrother-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "macOS desktop automation for AI agents. Deterministic Rust primitives with structured output for AI recovery."
keywords = ["automation", "macos", "accessibility", "ai", "agents"]

[lib]
name = "bigbrother_core"
path = "src/lib.rs"

[dependencies]
cidre.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
clap.workspace = true
chrono.workspace = true

[[example]]
name = "discord_scrape"
path = "examples/discord_scrape.rs"
