[package]
name = "bigbrother"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "The sensory cortex of the coming superintelligence. Desktop automation and workflow recording."
keywords = ["automation", "recording", "desktop", "ai", "singularity"]

[lib]
name = "bigbrother"

[dependencies]
bigbrother-core.workspace = true
bigbrother-recorder.workspace = true
